--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guilherme Freitas - Desenvolvedor</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="shortcut icon" href="../IMG/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="IMG/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
         <h1 class="guilhermeFreitas"> Oi, eu sou o </h1>
 
         <div class="divFoto">
-            <a href="" class="fotoGuilherme"><img src="../IMG/foto sem fundo.png" alt="minhaFoto" class="fotoGuilherme">
+            <a href="" class="fotoGuilherme"><img src="IMG/foto sem fundo.png" alt="minhaFoto" class="fotoGuilherme">
             </a>
         </div>
         <h1 class="guilhermeFreitas">Guilherme Freitas &#128513; </h1>
@@ -46,24 +46,24 @@
 
     <section class="redesSociaisContainer">
         <div class="redesSociaisIMG">
-            <a href="https://github.com/guiFreitasDev1" class="imgGithubA"><img src="../IMG/github.png" alt="imgGithub" class="imgGithub">
+            <a href="https://github.com/guiFreitasDev1" class="imgGithubA"><img src="IMG/github.png" alt="imgGithub" class="imgGithub">
                 <p class="imgGithubP"> GitHub</p>
             </a>
 
             <a href="https://www.linkedin.com/in/guilherme-augusto-freitas/" class="imgLinkedinA" target="_blan
             ">
-                <img src="../IMG/linkedin.png" alt="imgLinkedin" class="imgLinkedin">
+                <img src="IMG/linkedin.png" alt="imgLinkedin" class="imgLinkedin">
                 <p class="imgLinkedinP"> Linkedin</p>
             </a>
 
 
             <a href="https://www.instagram.com/guiisfreitas/" class="imgInstagramA" target="_blank">
-                <img src="../IMG/instagram.png" alt="imgInstagram" class="imgInstagram">
+                <img src="IMG/instagram.png" alt="imgInstagram" class="imgInstagram">
                 <p class="imgInstagramP"> instagram</p>
             </a>
 
             <a href="https://wa.me/5511981599191" class="imgWPPa" target="_blank">
-                <img src="../IMG/wpp.png" alt="imgWPP" class="imgWPP">
+                <img src="IMG/wpp.png" alt="imgWPP" class="imgWPP">
                 <p class="imgWPPp"> WhatsApp</p>
             </a>
 
@@ -122,21 +122,21 @@
 
             <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML" target="_blank" class="siteHTML">
                 <div class="habilidades1Layout">
-                    <img src="../IMG/html5.png" alt="imghtml" class="imghtml">
+                    <img src="IMG/html5.png" alt="imghtml" class="imghtml">
 
                 </div>
             </a>
 
             <a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank" class="siteCSS">
                 <div class="habilidades2Layout">
-                    <img src="../IMG/CSS3.png" alt="imgcss" class="imgcss">
+                    <img src="IMG/CSS3.png" alt="imgcss" class="imgcss">
 
                 </div>
             </a>
             <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" target="_blank" class="siteJS">
                 <div class="habilidades3Layout">
 
-                    <img src="../IMG/js.png" alt="imgjs" class="imgjs">
+                    <img src="IMG/js.png" alt="imgjs" class="imgjs">
 
                 </div>
             </a>
