--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <section class="redesSociaisContainer">
         <div class="redesSociaisIMG">
-            <a href="https://github.com/guiFreitasDev1" class="imgGithubA"><img src="IMG/github.png" alt="imgGithub" class="imgGithub">
+            <a href="https://github.com/guiFreitasDev1" class="imgGithubA" target="_blank"><img src="IMG/github.png" alt="imgGithub" class="imgGithub">
                 <p class="imgGithubP"> GitHub</p>
             </a>
 
