--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section class="redesSociaisContainer">
         <div class="redesSociaisIMG">
             <a href="https://github.com/guiFreitasDev1" class="imgGithubA" target="_blank"><img src="IMG/github.png" alt="imgGithub" class="imgGithub">
-                <p class="imgGithubP"> GitHub</p>
+                <p class="imgGithubP"> GitHuba</p>
             </a>
 
             <a href="https://www.linkedin.com/in/guilherme-augusto-freitas/" class="imgLinkedinA" target="_blan
