--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a href="#sobreMim" class="sobreMim">Sobre mim</a>
                 </li>
                 <li class="buttonLi">
-                    <a href="#projetos" class="projetos">Projeto</a>
+                    <a href="#projetos" class="projetos">Projetos</a>
                 </li>
                 <li class="buttonLi">
                     <a href="#habilidades" class="habilidades">Habilidades</a>
@@ -47,7 +47,7 @@
     <section class="redesSociaisContainer">
         <div class="redesSociaisIMG">
             <a href="https://github.com/guiFreitasDev1" class="imgGithubA" target="_blank"><img src="IMG/github.png" alt="imgGithub" class="imgGithub">
-                <p class="imgGithubP"> GitHuba</p>
+                <p class="imgGithubP"> GitHub</p>
             </a>
 
             <a href="https://www.linkedin.com/in/guilherme-augusto-freitas/" class="imgLinkedinA" target="_blan
