--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <a href="#projetos" class="projetos">Projetos</a>
                 </li>
                 <li class="buttonLi">
-                    <a href="#habilidades" class="habilidades">Habilidadesa</a>
+                    <a href="#habilidades" class="habilidades">Habilidades</a>
                 </li>
             </ul>
         </div>
