--- a/index.html
+++ b/index.html
@@ -77,14 +77,11 @@
         <h1 class="sobreH1"> Sobre mim </h1>
         <p class="sobreP">Olá, me chamo Guilherme Freitas, tenho 20 anos, sempre estive conectado com o mundo da
             internet e sempre quis trabalhar
-            com algo relacionado, foi então que conheci a programação através do meu irmão, que também é um programador,
-            então descobri
-            algo que eu gosto de fazer, atualmente estudo programação e tenho como objetivo atuar na área de programação
+            com algo relacionado, foi então que conheci a programação através do meu irmão, que é um desenvolvedor,
+            então descobri algo que eu gosto de fazer, atualmente estudo desenvolvimento web e tenho como objetivo atuar na área
             para adquirir conhecimento e aprimorar minhas habilidades, procuro minha primeira oportunidade de trabalho
-            para agregar
-            valor à minha carreira profissional e para empresa. Meu maior objeto como desenvolvedor, é ajudar meu time a
-            entregar uma
-            experiência incrível, para o cliente e usuário da nossa aplicação. </p>
+            para agregar valor à minha carreira profissional e para empresa. Meu maior objetivo como desenvolvedor, é ajudar meu time a
+            entregar uma experiência incrível, para o cliente e usuário da nossa aplicação. </p>
 
     </section>
 
