--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
         <h1 class="guilhermeFreitas"> Oi, eu sou o </h1>
 
         <div class="divFoto">
-            <a href="" class="fotoGuilherme"><img src="IMG/foto sem fundo.png" alt="minhaFoto" class="fotoGuilherme">
-            </a>
+            <img src="IMG/foto sem fundo.png" alt="minhaFoto" class="fotoGuilherme">            
         </div>
         <h1 class="guilhermeFreitas">Guilherme Freitas &#128513; </h1>
         <p class="devJunior"> Desenvolvedor Junior</p>
